--- a/public/index.html
+++ b/public/index.html
@@ -9,15 +9,19 @@
       name="description"
       content="Web site created using create-react-app"
     />
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Poppins:wght@200;300;400;500;600;700&display=swap" rel="stylesheet">
     <style>
       *{
         margin: 0;
+        font-family: 'Poppins', sans-serif;
 
       }
     </style>
     
    
-    <title>React App</title>
+    <title>Blog App</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
